tests/ui/associated-inherent-types/style.stderr
error: associated type `typ` should have an upper camel case name
  --> $DIR/style.rs:8:10
   |
LL |     type typ = ();
   |          ^^^
   |
note: the lint level is defined here
  --> $DIR/style.rs:3:9
   |
LL | #![deny(non_camel_case_types)]
   |         ^^^^^^^^^^^^^^^^^^^^
help: convert the identifier to upper camel case
   |
LL |     type Typ = ();
   |          ~~~

error: aborting due to 1 previous error

